# weather_stations

./: Cargo.toml
src/: main.rs  structs.rs  test.rs
