[package]
name = "weather_stations"
version = "0.1.0"
authors = ["Claus Guttesen <kometen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"
serde = "1.0"
serde-xml-rs = "0.4"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
dotenv = "0.15"
dotenv_codegen = "0.15"
